--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@ __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+
+# media 폴더 전체 무시
 media
+# 단, default_mypage_image.jpg 파일은 제외
+!default_mypage_image.jpg
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
