--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@ db.sqlite3
 db.sqlite3-journal
 
 # media 폴더 전체 무시
-media
+media/
 # 단, default_mypage_image.jpg 파일은 제외
-!default_mypage_image.jpg
+!media/default_mypage_image.jpg
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
